@@ -1,4 +1,4 @@
-# $Id: CHANGELOG,v 1.97 2004/01/07 05:54:01 jaco Exp $
+# $Id: CHANGELOG,v 1.98 2004/01/07 07:03:01 jaco Exp $
 
 * Wed, Jan 07, 2003, 0.5.7-cvs
   + Buchan Milne <bgmilne@cae.co.za>:
@@ -71,6 +71,7 @@
       - USB removables are mounted at /mnt/usb[?] now
       - Home partition located on ext2 loop device to allow symlinks
       - Removable devices are mounted with supermount now
+      - Add /proc/bus/usb (usbdevfs) to /etc/fstab
     [linuxrc]:
       - Allow for finding the cloop image on SCSI devices as well
         by probing with all the SCSI modules
